fixed player mapper tests